Multiple changes to thesis and plots

--- a/Code/Tests/Cluster_weight.ipynb
+++ b/Code/Tests/Cluster_weight.ipynb
@@ -127,8 +127,8 @@
     "ax.xaxis.set_ticks_position('top')\n",
     "\n",
     "divider = make_axes_locatable(ax)\n",
-    "ax_dimsin = divider.append_axes(\"top\", 1.3, pad=0.1, sharex=ax)\n",
-    "ax_dimsout = divider.append_axes(\"left\", 1.3, pad=0.1, sharey=ax)\n",
+    "ax_dimsin = divider.append_axes(\"top\", 1.1, pad=0.1, sharex=ax)\n",
+    "ax_dimsout = divider.append_axes(\"left\", 1.1, pad=0.1, sharey=ax)\n",
     "\n",
     "# make some labels invisible\n",
     "ax_dimsin.xaxis.set_tick_params(labelbottom=False)\n",
@@ -137,8 +137,8 @@
     "\n",
     "ax_dimsin.invert_yaxis()\n",
     "\n",
-    "perm.multiple_connection_plot(perm.invert_permutations(Ps_col),start=0,end=3,ax=ax_dimsin,N=5,flipxy=True,linewidth=0.25)\n",
-    "perm.multiple_connection_plot(perm.invert_permutations(Ps_row),start=0,end=3,ax=ax_dimsout,N=5,linewidth=0.2)\n",
+    "perm.multiple_connection_plot(perm.invert_permutations(Ps_col),start=0,end=3,ax=ax_dimsin,N=20,flipxy=True,linewidth=0.25)\n",
+    "perm.multiple_connection_plot(perm.invert_permutations(Ps_row),start=0,end=3,ax=ax_dimsout,N=20,linewidth=0.2)\n",
     "\n",
     "\n",
     "ax_dimsout.xaxis.set_ticks_position('top')\n",
@@ -159,8 +159,8 @@
     "ax_dimsin.set_ylim((3,0))   \n",
     "ax.set_ylim(y_lim)\n",
     "ax.set_xlim(x_lim)\n",
-    "plt.figtext(0.3,0.72,'Iteration',rotation=-45,\\\n",
-    "                         horizontalalignment='right', verticalalignment='center',rotation_mode='anchor')\n",
+    "ax.text(0,0,r'Iteration$\\qquad\\quad$.',rotation=-45,\\\n",
+    "                 horizontalalignment='right', verticalalignment='center',rotation_mode='anchor')\n",
     "\n",
     "plt.savefig(\"Mobilenet_permute.pdf\",bbox_inches = 'tight',bbox=\"tight\")\n",
     "bbox = fig.get_tightbbox(fig.canvas.get_renderer()) "
@@ -275,6 +275,51 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "w = 0.75*setup_plots.textwidth\n",
+    "fig, ax = plt.subplots(figsize=(w, 2/3*w))\n",
+    "plt.plot(cost_orig,err_orig,'1-',label='regualar system')\n",
+    "plt.plot(cost_per,err_per,'2--',label='permuted system')\n",
+    "ylims = ax.get_ylim()\n",
+    "plt.vlines(T.size,ylims[0],ylims[1],colors='0.4')\n",
+    "ax.ticklabel_format(axis='x',scilimits=(0,0))\n",
+    "ax.set_ylim(ylims)\n",
+    "plt.grid()\n",
+    "plt.legend()\n",
+    "\n",
+    "i = np.argmin(np.abs(alpha-0.25))\n",
+    "#plt.scatter([cost_orig[i],cost_move[i]],[err_orig[i],err_move[i]])\n",
+    "\n",
+    "\n",
+    "plt.xlabel(\"Number of multiplications\")\n",
+    "plt.ylabel(r'$\\| A-\\tilde{A} \\| $')\n",
+    "\n",
+    "zoom_h = 1\n",
+    "zoom_w = 3e5\n",
+    "s = 5.2\n",
+    "axins = ax.inset_axes([0.45, 0.2,s*zoom_w/4e6,s*zoom_h/10])\n",
+    "\n",
+    "axins.grid()\n",
+    "axins.plot(cost_orig,err_orig,'1-')\n",
+    "axins.plot(cost_per,err_per,'2--')\n",
+    "\n",
+    "axins.set_xlim(cost_orig[i]-0.5*zoom_w, cost_orig[i]+0.5*zoom_w)\n",
+    "axins.set_ylim(err_orig[i]-0.5*zoom_h, err_orig[i]+0.5*zoom_h)\n",
+    "axins.set_xticklabels([])\n",
+    "axins.set_yticklabels([])\n",
+    "\n",
+    "ax.indicate_inset_zoom(axins, edgecolor=\"black\")\n",
+    "axins.text(cost_orig[i]-0.2*zoom_w,err_orig[i]+0.3*zoom_h, r'$\\epsilon = \\frac{1}{4} \\|A\\|_H$',)\n",
+    "plt.savefig(\"perm_example_mobilenet_error.pdf\",bbox=\"tight\",bbox_inches = 'tight')\n",
+    "bbox = plt.gcf().get_tightbbox( plt.gcf().canvas.get_renderer()) \n",
+    "print(bbox.width/setup_plots.textwidth)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "i = 2\n",
     "print(\"alpha=\",alpha[i])\n",
     "print(\"eps=\",eps[i])\n",
@@ -289,10 +334,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.figure(figsize = (4,2*len(reports)))\n",
-    "for i,report in enumerate(reports):\n",
-    "    plt.subplot(len(reports),1,i+1)\n",
-    "    plt.plot(report[\"f\"])\n"
+    "plt.spy(reports[0][\"s_rows\"])"
    ]
   },
   {
@@ -301,7 +343,70 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.spy(reports[0][\"s_rows\"])"
+    "sys_apr_quater = approx.get_approxiamtion(eps[i])\n",
+    "sys_apr_quater_per = approx_per.get_approxiamtion(eps[i])\n",
+    "print(eps[i])\n",
+    "\n",
+    "\n",
+    "dims_state_ref = [sys_apr_quater.causal_system.dims_state,sys_apr_quater.anticausal_system.dims_state]\n",
+    "dims_state = [sys_apr_quater_per.causal_system.dims_state,sys_apr_quater_per.anticausal_system.dims_state]\n",
+    "\n",
+    "x = np.arange(len(dims_state[0]))  # the label locations\n",
+    "width = 0.35  # the width of the bars\n",
+    "\n",
+    "w = setup_plots.textwidth\n",
+    "fig, axes = plt.subplots(2,1,figsize=(w, w/2),sharex=True)\n",
+    "for v in [0,1]:\n",
+    "    ax =axes[v]\n",
+    "    if v ==0:\n",
+    "        label = ['regular',None]\n",
+    "        ax.set_ylabel(r\"$d$\")\n",
+    "    else:\n",
+    "        label = [None,'permuted']\n",
+    "        ax.set_ylabel(r\"$d^*$\")\n",
+    "    rects1 = ax.bar(x - width/2, dims_state_ref[v], width, label=label[0])\n",
+    "    rects2 = ax.bar(x + width/2, dims_state[v], width, label=label[1])\n",
+    "    ax.grid()\n",
+    "    ax.set_ylim(0,105)\n",
+    "    if v ==0:\n",
+    "        ax.bar(0,0,label=r\"$\\Sigma =\"+str(np.sum(dims_state_ref))+\"$\",color = \"w\")\n",
+    "        ax.bar(0,0,label=\" \",color = \"w\")\n",
+    "    else:\n",
+    "        ax.bar(0,0,label=r\"$\\Sigma =\"+str(np.sum(dims_state))+\"$\",color = \"w\")#linewidth=0    \n",
+    "\n",
+    "ax.set_xlim(0.4,7.6)\n",
+    "ax.set_xlabel(r\"$k$\")\n",
+    "\n",
+    "fig.legend(loc='center right')\n",
+    "plt.subplots_adjust(right=0.75)\n",
+    "\n",
+    "plt.savefig(\"perm_example_mobilenet_state_dims.pdf\",bbox=\"tight\",bbox_inches = 'tight')\n",
+    "bbox = plt.gcf().get_tightbbox( plt.gcf().canvas.get_renderer()) \n",
+    "print(bbox.width/setup_plots.textwidth)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dim_sum = np.sum(dims_state,axis=0)\n",
+    "dim_sum_ref = np.sum(dims_state_ref,axis=0)\n",
+    "print(dim_sum,np.sum(dim_sum))\n",
+    "print(dim_sum_ref,np.sum(dim_sum_ref))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize = (4,2*len(reports)))\n",
+    "for i,report in enumerate(reports):\n",
+    "    plt.subplot(len(reports),1,i+1)\n",
+    "    plt.plot(report[\"f\"])\n"
    ]
   },
   {
@@ -358,7 +463,7 @@
    "outputs": [],
    "source": [
     "sys_per,Ps_col,Ps_row,reports = SplitP.identification_split_permute(T,4,epsilon=1e-3,strategy=\"fro\",\\\n",
-    "            opts=[{\"gamma\":6e3,\"N\":100},{\"gamma\":5e2,\"N\":100},{\"gamma\":1.5e2,\"N\":100},{\"gamma\":5e0,\"N\":100}])\n",
+    "            opts=[{\"gamma\":6e3,\"N\":100},{\"gamma\":6e3,\"N\":100},{\"gamma\":6e3,\"N\":100},{\"gamma\":6e3,\"N\":100}])\n",
     "utils.check_dims(sys_per)"
    ]
   },
@@ -367,6 +472,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "utils.show_system(sys_per)"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
    "source": [
     "w = setup_plots.textwidth\n",
     "fig, ax = plt.subplots(figsize=(w, w))\n",
@@ -409,11 +521,18 @@
     "ax_dimsin.set_ylim((4,0))   \n",
     "ax.set_ylim(y_lim)\n",
     "ax.set_xlim(x_lim)\n",
-    "plt.figtext(0.3,0.72,'Iteration',rotation=-45,\\\n",
-    "                         horizontalalignment='right', verticalalignment='center',rotation_mode='anchor')\n",
+    "ax.text(0,0,r'Iteration$\\qquad\\quad$.',rotation=-45,\\\n",
+    "                 horizontalalignment='right', verticalalignment='center',rotation_mode='anchor')\n",
     "\n",
     "plt.savefig(\"alexnet_permute.pdf\",bbox_inches = 'tight',bbox=\"tight\")\n",
     "bbox = fig.get_tightbbox(fig.canvas.get_renderer()) "
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "bbox.width/w"
    ]
   },
   {
@@ -654,7 +773,29 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "utils.save_system(sys,'AlexNet/system_ref_perm.npz',sigmas=(sigmas_causal,sigmas_anticausal))\n",
+    "utils.save_system(sys_per,'AlexNet/system_perm.npz',sigmas=(sigmas_causal_per,sigmas_anticausal_per))\n",
+    "\n",
+    "#approx =Approximation(sys,(sigmas_causal,sigmas_anticausal))\n",
+    "#approx_per=Approximation(sys_per,(sigmas_causal_per,sigmas_anticausal_per))\n",
+    "\n",
+    "np.savez('AlexNet/data_per.npz',err_orig=err_orig,cost_orig=cost_orig,err_per=err_per,\\\n",
+    "            cost_per=cost_per,\\\n",
+    "            Ps_col=Ps_col,Ps_row=Ps_row)\n",
+    "        \n",
+    "#err_orig,cost_orig = calc_values(approx,eps,T)\n",
+    "#err_per,cost_per = calc_values(approx_per,eps,T_per)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "P"
+   ]
   }
  ],
  "metadata": {
