--- a/Code/Tests/Movement_weight.ipynb
+++ b/Code/Tests/Movement_weight.ipynb
@@ -30,7 +30,7 @@
     "\n",
     "from tvsclib.system_identification_svd import SystemIdentificationSVD\n",
     "from tvsclib.toeplitz_operator import ToeplitzOperator\n",
-    "import time"
+    "import time\n"
    ]
   },
   {
@@ -100,6 +100,8 @@
     "    ax_dimsin.set_yticks(np.arange(1,N,spacing))\n",
     "    ax_dimsout.set_xticks(np.arange(1,N,spacing))\n",
     "\n",
+    "\n",
+    "\n",
     "    #ax_dimsin.set_xticks(np.arange(3,48,3)-0.5)\n",
     "    #ax_dimsout.set_yticks(np.arange(3,48,3)-0.5)\n",
     "\n",
@@ -109,11 +111,16 @@
     "    ax_dimsin.set_ylim((N,0))   \n",
     "    ax.set_ylim(y_lim)\n",
     "    ax.set_xlim(x_lim)\n",
+    "    \n",
+    "    ax.set_xticks(np.hstack([0,np.cumsum(sys_move.dims_in)])-0.5)\n",
+    "    ax.set_yticks(np.hstack([0,np.cumsum(sys_move.dims_out)])-0.5)\n",
+    "    ax.set_xticklabels([' '])\n",
+    "    ax.set_yticklabels([' '])\n",
     "\n",
     "    offset = 0.1\n",
     "\n",
     "\n",
-    "    ax.text(0,0,r'Iteration$\\qquad\\quad$.',rotation=-45,\\\n",
+    "    ax.text(0,0,r'Iteration$\\quad\\quad\\quad$.',rotation=-45,\\\n",
     "                             horizontalalignment='right', verticalalignment='center',rotation_mode='anchor')\n",
     "\n",
     "    \n",
@@ -301,6 +308,8 @@
     "    ax.set_yticks(np.cumsum(systems[i].dims_out)-0.5)\n",
     "    ax.set_xticklabels([' '])\n",
     "    ax.set_yticklabels([' '])\n",
+    "    ax.xaxis.set_ticks_position('none')\n",
+    "    ax.yaxis.set_ticks_position('none')\n",
     "    \n",
     "    print(\"K=\",Ks[i])\n",
     "    print(\"  cost=\",systems[i].cost())\n",
@@ -366,7 +375,7 @@
     "\n",
     "\n",
     "plt.xlabel(\"Number of multiplications\")\n",
-    "plt.ylabel(r'$\\| A-\\tilde{A} \\| $')\n",
+    "plt.ylabel(r'$\\| M-\\tilde{T} \\| $')\n",
     "\n",
     "zoom_h = 1\n",
     "zoom_w = 3e5\n",
@@ -381,9 +390,15 @@
     "axins.set_ylim(err_orig[i]-0.5*zoom_h, err_orig[i]+0.5*zoom_h)\n",
     "axins.set_xticklabels([])\n",
     "axins.set_yticklabels([])\n",
+    "text = ax.text(cost_orig[0]-3e5,err_orig[0]+0.7, r'$\\epsilon = 0$',\n",
+    "                  bbox={'facecolor': 'white',\"edgecolor\":\"black\", 'alpha': 0.5, 'pad': 0,\"linewidth\":0})\n",
+    "text = ax.text(cost_orig[-1]+1.1e5,err_orig[-1]-.2, r'$\\epsilon = \\|M\\|_H$',\n",
+    "                  bbox={'facecolor': 'white',\"edgecolor\":\"black\", 'alpha': 0.5, 'pad': 0,\"linewidth\":0})\n",
     "\n",
     "ax.indicate_inset_zoom(axins, edgecolor=\"black\")\n",
-    "axins.text(cost_orig[i]-0.2*zoom_w,err_orig[i]+0.3*zoom_h, r'$\\epsilon = \\frac{1}{4} \\|A\\|_H$',)\n",
+    "text = axins.text(cost_orig[i]-0.15*zoom_w,err_orig[i]+0.3*zoom_h, r'$\\epsilon = \\frac{1}{4} \\|M\\|_H$',\n",
+    "                  bbox={'facecolor': 'white',\"edgecolor\":\"black\", 'alpha': 0.5, 'pad': 0,\"linewidth\":0})\n",
+    "\n",
     "plt.savefig(\"move_example_mobilenet_error.pdf\",bbox=\"tight\",bbox_inches = 'tight')\n",
     "bbox = plt.gcf().get_tightbbox( plt.gcf().canvas.get_renderer()) \n",
     "print(bbox.width/setup_plots.textwidth)"
@@ -404,7 +419,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "alpha"
+    "alpha[i]"
    ]
   },
   {
@@ -426,6 +441,66 @@
    "source": [
     "print(\"Original errror=\",err_orig[i])\n",
     "print(\"New errror     =\",err_move[i])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sys_apr_quater = approx.get_approxiamtion(eps[i])\n",
+    "sys_apr_quater_move = approx_move.get_approxiamtion(eps[i])\n",
+    "print(eps[i])\n",
+    "\n",
+    "dims_state_ref = [sys_apr_quater.causal_system.dims_state,sys_apr_quater.anticausal_system.dims_state]\n",
+    "dims_state = [sys_apr_quater_move.causal_system.dims_state,sys_apr_quater_move.anticausal_system.dims_state]\n",
+    "\n",
+    "x = np.arange(len(dims_state[0]))  # the label locations\n",
+    "width = 0.35  # the width of the bars\n",
+    "\n",
+    "w = setup_plots.textwidth\n",
+    "fig, axes = plt.subplots(2,1,figsize=(w, w/2),sharex=True)\n",
+    "for v in [0,1]:\n",
+    "    ax =axes[v]\n",
+    "    if v ==0:\n",
+    "        label = ['initial',None]\n",
+    "        ax.set_ylabel(r\"$d$\")\n",
+    "    else:\n",
+    "        label = [None,'adapted']\n",
+    "        ax.set_ylabel(r\"$d^*$\")\n",
+    "    rects1 = ax.bar(x - width/2, dims_state_ref[v], width, label=label[0])\n",
+    "    rects2 = ax.bar(x + width/2, dims_state[v], width, label=label[1])\n",
+    "    ax.grid()\n",
+    "    ax.set_ylim(0,120)\n",
+    "    if v ==0:\n",
+    "        ax.bar(0,0,label=r\"$\\Sigma =\"+str(np.sum(dims_state_ref))+\"$\",color = \"w\")\n",
+    "        ax.bar(0,0,label=\" \",color = \"w\")\n",
+    "    else:\n",
+    "        ax.bar(0,0,label=r\"$\\Sigma =\"+str(np.sum(dims_state))+\"$\",color = \"w\")#linewidth=0\n",
+    "    \n",
+    "\n",
+    "ax.set_xlim(0.4,9.6)\n",
+    "ax.set_xlabel(r\"$k$\")\n",
+    "\n",
+    "fig.legend(loc='center right')\n",
+    "plt.subplots_adjust(right=0.75)\n",
+    "\n",
+    "plt.savefig(\"move_example_mobilenet_state_dims.pdf\",bbox=\"tight\",bbox_inches = 'tight')\n",
+    "bbox = plt.gcf().get_tightbbox( plt.gcf().canvas.get_renderer()) \n",
+    "print(bbox.width/setup_plots.textwidth)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dim_sum = np.sum(dims_state,axis=0)\n",
+    "dim_sum_ref = np.sum(dims_state_ref,axis=0)\n",
+    "print(dim_sum,np.sum(dim_sum))\n",
+    "print(dim_sum_ref,np.sum(dim_sum_ref))"
    ]
   },
   {
