--- a/Code/Tests/Plot_costs.ipynb
+++ b/Code/Tests/Plot_costs.ipynb
@@ -246,7 +246,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cost_total_prod.expand().collect(K)"
+    "cost_of_K = cost_total_prod.expand().collect(K)\n",
+    "cost_of_K"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sp.pycode(cost_of_K)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cost_of_K.subs(K,1)"
    ]
   },
   {
