--- a/Code/Tests/Plot_example_Cluster.ipynb
+++ b/Code/Tests/Plot_example_Cluster.ipynb
@@ -63,7 +63,8 @@
     "dims_in =  np.array([4, 4, 4, 4])*4\n",
     "dims_out = np.array([4, 4, 4, 4])*4\n",
     "\n",
-    "\n",
+    "#dims_in =  np.array([4, 5, 5, 4])*3\n",
+    "#dims_out = np.array([5, 4, 4, 5])*3\n",
     "\n",
     "n = 2\n",
     "#create orthogonal vectors and normalize them to the size of the matix (i.e. norm(block)/size(block) = const\n",
@@ -98,7 +99,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sys,Ps_col,Ps_row,reports = SplitP.identification_split_permute(T,2,strategy=\"rank\",opts={\"gamma\":1e6})\n",
+    "sys,Ps_col,Ps_row,reports = SplitP.identification_split_permute(T,2,strategy=\"rank\",opts={\"gamma\":1e5})\n",
     "P_col = Ps_col[-1]\n",
     "P_row = Ps_row[-1]\n",
     "utils.check_dims(sys)\n",
@@ -155,7 +156,7 @@
    "source": [
     "from mpl_toolkits.axes_grid1 import make_axes_locatable\n",
     "\n",
-    "w = setup_plots.textwidth\n",
+    "w = setup_plots.textwidth*0.7\n",
     "fig, ax = plt.subplots(figsize=(w, w))\n",
     "\n",
     "utils.show_system(sys,ax=ax)\n",
@@ -164,8 +165,8 @@
     "ax.xaxis.set_ticks_position('top')\n",
     "\n",
     "divider = make_axes_locatable(ax)\n",
-    "ax_dimsin = divider.append_axes(\"top\", 1.3, pad=0.1, sharex=ax)\n",
-    "ax_dimsout = divider.append_axes(\"left\", 1.3, pad=0.1, sharey=ax)\n",
+    "ax_dimsin = divider.append_axes(\"top\", 0.9, pad=0.045, sharex=ax)\n",
+    "ax_dimsout = divider.append_axes(\"left\", 0.9, pad=0.045, sharey=ax)\n",
     "\n",
     "# make some labels invisible\n",
     "ax_dimsin.xaxis.set_tick_params(labelbottom=False)\n",
@@ -176,18 +177,16 @@
     "\n",
     "cmap = plt.cm.get_cmap('tab20')\n",
     "colors = np.repeat(cmap((1/20)*np.arange(4)+0.001),dims_in,axis=0)[P_in_ref]\n",
-    "perm.multiple_connection_plot(perm.invert_permutations(Ps_col),colors=colors,start=0,end=2,ax=ax_dimsin,flipxy=True,linewidth=2.9)\n",
+    "perm.multiple_connection_plot(perm.invert_permutations(Ps_col),colors=colors,start=0,end=2,ax=ax_dimsin,flipxy=True,linewidth=2.0)\n",
     "\n",
     "colors = np.repeat(cmap((1/20)*np.arange(4)+0.001),dims_out,axis=0)[P_out_ref]\n",
-    "perm.multiple_connection_plot(perm.invert_permutations(Ps_row),colors=colors,start=0,end=2,ax=ax_dimsout,linewidth=2.9)\n",
+    "perm.multiple_connection_plot(perm.invert_permutations(Ps_row),colors=colors,start=0,end=2,ax=ax_dimsout,linewidth=2.0)\n",
     "\n",
     "\n",
     "ax_dimsout.xaxis.set_ticks_position('top')\n",
     "ax_dimsout.yaxis.set_ticks_position('right')\n",
     "ax_dimsout.yaxis.set_tick_params(labelright=False)\n",
     "\n",
-    "ax_dimsin.set_yticks(np.arange(1,3))\n",
-    "ax_dimsout.set_xticks(np.arange(1,3))\n",
     "\n",
     "ax_dimsin.set_xticks(np.arange(0,4**3+1,16)-0.5)\n",
     "ax_dimsout.set_yticks(np.arange(0,4**3+1,16)-0.5)\n",
@@ -200,6 +199,11 @@
     "ax_dimsin.set_ylim((2,0))   \n",
     "ax.set_ylim(y_lim)\n",
     "ax.set_xlim(x_lim)\n",
+    "\n",
+    "ax_dimsin.set_yticks(np.arange(0,2))\n",
+    "ax_dimsout.set_xticks(np.arange(0,3))\n",
+    "ax_dimsout.set_xticklabels([\"$0$\",\"$1$\",r\"$2\\,.$\"],zorder=0)\n",
+    "\n",
     "plt.figtext(0.3,0.72,'Iteration',rotation=-45,\\\n",
     "                         horizontalalignment='right', verticalalignment='center',rotation_mode='anchor')\n",
     "\n",
@@ -221,7 +225,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "ax_dimsout.set_xticklabels?"
+   ]
   },
   {
    "cell_type": "code",
