--- a/Code/Tests/Plot_examples_move.ipynb
+++ b/Code/Tests/Plot_examples_move.ipynb
@@ -212,7 +212,7 @@
     "                         horizontalalignment='right', verticalalignment='center',rotation_mode='anchor')\n",
     "\n",
     "s = 1.75\n",
-    "axins = ax_dimsout.inset_axes([-1.95, 0.25,s*4.8/5,s*20/48])\n",
+    "axins = ax_dimsout.inset_axes([-2.55, 0.25,s*4.8/5,s*20/48])\n",
     "#axins.imshow(Z2, extent=extent, origin=\"lower\")\n",
     "# sub region of the original image\n",
     "x1, x2, y1, y2 = 0.2, 4.8, 34-0.5, 14-0.5\n",
@@ -239,7 +239,9 @@
     "axins.set_ylim(y1, y2)\n",
     "#axins.set_xticklabels([])\n",
     "axins.set_yticklabels([])\n",
-    "axins.set_title('Search Tree')\n",
+    "axins.set_xlabel(\"Iteration\")\n",
+    "\n",
+    "#axins.set_title('Search Tree')\n",
     "\n",
     "ax_dimsout.indicate_inset_zoom(axins, edgecolor=\"black\")\n",
     "plt.savefig(\"example_move_iterations.pdf\",bbox_inches = 'tight',bbox=\"tight\")\n",
